--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@aragon/ui": "^1.5.0",
+    "@sentry/browser": "^5.20.1",
     "core-js": "^3.3.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -75,7 +76,7 @@
   "scripts": {
     "bundlewatch": "bundlewatch",
     "start": "rimraf ./public && npm run sync-assets && parcel serve src/index.html --port 3000 --out-dir ./public",
-    "start:mainnet": "cross-env CHAIN_ID=1 npm start ",
+    "start:mainnet": "cross-env CHAIN_ID=1 npm start",
     "start:rinkeby": "cross-env CHAIN_ID=4 npm start",
     "build": "rimraf ./public && ./scripts/build.sh",
     "build:mainnet": "cross-env CHAIN_ID=1 npm run build",
