--- a/package.json
+++ b/package.json
@@ -85,10 +85,12 @@
     "jest": "jest --passWithNoTests",
     "sync-assets": "copy-aragon-ui-assets ./public"
   },
-  "browserslist": {
-    "development": ">2%, last 1 edge versions, not ie > 0, not op_mini all",
-    "production": ">2%, last 1 edge versions, not ie > 0, not op_mini all"
-  },
+  "browserslist": [
+    ">2%",
+    "last 1 edge versions",
+    "not ie > 0",
+    "not op_mini all",
+  ],
   "husky": {
     "hooks": {
       "pre-push": "npm test",
