--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+# configuration
+# (keep `.env.enc` and `.env.sample`, but ignore all other `.env`s)
+.env*
+!.env.enc
+!.env.sample
+
 # dependencies
 node_modules/
 
