--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "babel-plugin-styled-components": "^1.11.1",
     "bundlewatch": "^0.2.7",
     "cross-env": "^7.0.2",
-    "dotenv": "^8.2.0",
+    "dotenv-cli": "^3.2.0",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
@@ -75,10 +75,10 @@
   },
   "scripts": {
     "bundlewatch": "bundlewatch",
-    "start": "rimraf ./public && npm run sync-assets && parcel serve src/index.html --port 3000 --out-dir ./public",
+    "start": "dotenv rimraf ./public && npm run sync-assets && parcel serve src/index.html --port 3000 --out-dir ./public",
     "start:mainnet": "cross-env CHAIN_ID=1 npm start",
     "start:rinkeby": "cross-env CHAIN_ID=4 npm start",
-    "build": "rimraf ./public && ./scripts/build.sh",
+    "build": "dotenv rimraf ./public && ./scripts/build.sh",
     "build:mainnet": "cross-env CHAIN_ID=1 npm run build",
     "build:rinkeby": "cross-env CHAIN_ID=4 npm run build",
     "lint": "eslint ./src",
