--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@aragon/connect": "*",
     "@aragon/connect-react": "^0.5.2",
     "@sentry/browser": "^5.20.1",
+    "@aragon/connect-react": "^0.5.2",
     "core-js": "^3.3.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
