--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@aragon/connect": "*",
     "@aragon/connect-react": "^0.5.2",
     "@sentry/browser": "^5.20.1",
+    "@aragon/connect-react": "^0.5.2",
     "core-js": "^3.3.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -78,12 +79,14 @@
   },
   "scripts": {
     "bundlewatch": "bundlewatch",
-    "start": "dotenv rimraf ./public && npm run sync-assets && parcel serve src/index.html --port 3000 --out-dir ./public",
-    "start:mainnet": "cross-env CHAIN_ID=1 npm start",
-    "start:rinkeby": "cross-env CHAIN_ID=4 npm start",
+    "start": "dotenv rimraf ./public && npm run sync-assets && parcel serve src/index.html --port 3000 --out-dir ./public --no-cache",
+    "start:ethereum": "cross-env NETWORK_ENVIRONMENT=ethereum npm start",
+    "start:rinkeby": "cross-env NETWORK_ENVIRONMENT=rinkeby npm start",
+    "start:rinkeby-staging": "cross-env NETWORK_ENVIRONMENT=rinkeby-staging npm start",
     "build": "dotenv rimraf ./public && ./scripts/build.sh",
-    "build:mainnet": "cross-env CHAIN_ID=1 npm run build",
-    "build:rinkeby": "cross-env CHAIN_ID=4 npm run build",
+    "build:ethereum": "cross-env NETWORK_ENVIRONMENT=ethereum npm run build",
+    "build:rinkeby": "cross-env NETWORK_ENVIRONMENT=rinkeby npm run build",
+    "build:rinkeby-staging": "cross-env NETWORK_ENVIRONMENT=rinkeby-staging npm run build",
     "lint": "eslint ./src",
     "test": "npm run lint && npm run jest",
     "jest": "jest --passWithNoTests",
