--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     ]
   },
   "dependencies": {
-    "@aragon/ui": "^1.5.0",
     "@aragon/connect": "*",
     "@aragon/connect-react": "^0.5.2",
+    "@aragon/ui": "1.6.0",
     "@sentry/browser": "^5.20.1",
-    "@aragon/connect-react": "^0.5.2",
     "core-js": "^3.3.2",
+    "dayjs": "^1.8.27",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
