--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@aragon/ui": "^1.5.0",
     "@sentry/browser": "^5.20.1",
     "core-js": "^3.3.2",
+    "is-ipfs": "^2.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
