--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
   },
   "dependencies": {
     "@aragon/connect": "*",
-    "@aragon/connect-react": "^0.5.2",
-    "@aragon/ui": "^1.5.0",
+    "@aragon/connect-react": "^0.6.0",
+    "@aragon/ui": "^1.6.0",
     "@sentry/browser": "^5.20.1",
     "core-js": "^3.3.2",
+    "dayjs": "^1.8.27",
     "is-ipfs": "^2.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
