--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@sentry/browser": "^5.20.1",
     "core-js": "^3.3.2",
     "dayjs": "^1.8.27",
+    "ethers": "^5.0.8",
     "is-ipfs": "^2.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
