--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     ]
   },
   "dependencies": {
-    "@aragon/connect": "*",
-    "@aragon/connect-react": "^0.6.0",
+    "@aragon/connect-agreement": "^0.0.0-beta.2",
+    "@aragon/connect-disputable-voting": "^0.0.0-beta.2",
+    "@aragon/connect-react": "^0.7.0-beta.1",
     "@aragon/ui": "^1.7.0",
     "@sentry/browser": "^5.20.1",
     "core-js": "^3.3.2",
