Temporarily set default network env to rinkeby-staging

--- a/now.json
+++ b/now.json
@@ -7,7 +7,7 @@
   },
   "build": {
     "env": {
-      "NETWORK_ENVIRONMENT": "rinkeby"
+      "NETWORK_ENVIRONMENT": "rinkeby-staging"
     }
   }
 }
