--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     ]
   },
   "dependencies": {
+    "@aragon/connect": "^0.7.0-beta.3",
     "@aragon/connect-agreement": "^0.0.0-beta.4",
     "@aragon/connect-disputable-voting": "^0.0.0-beta.4",
     "@aragon/connect-react": "^0.7.0-beta.3",
