Add stepper component

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@aragon/connect-disputable-voting": "^0.5.0-beta.5",
     "@aragon/connect-react": "^0.7.0-beta.3",
     "@aragon/ui": "^1.7.0",
+    "@juggle/resize-observer": "^3.2.0",
     "@sentry/browser": "^5.20.1",
     "clipboard-polyfill": "^3.0.1",
     "core-js": "^3.3.2",
@@ -49,6 +50,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-spring": "^8.0.1",
+    "react-use-measure": "^2.0.1",
     "styled-components": "^5.1.1",
     "use-viewport": "^0.2.0",
     "use-wallet": "^0.8.0"
