--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "dependencies": {
     "@aragon/connect-agreement": "^0.8.0-beta.1",
     "@aragon/connect-disputable-voting": "^0.8.0-beta.1",
-    "@aragon/connect-react": "^0.7.0",
+    "@aragon/connect-react": "^0.8.0-alpha.2",
     "@aragon/ui": "^1.7.0",
     "@sentry/browser": "^5.20.1",
     "clipboard-polyfill": "^3.0.1",
