--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     ]
   },
   "dependencies": {
-    "@aragon/connect-agreement": "^0.0.0-beta.4",
-    "@aragon/connect-disputable-voting": "^0.5.0-beta.5",
-    "@aragon/connect-react": "^0.7.0-beta.3",
+    "@aragon/connect-agreement": "^0.8.0-beta.1",
+    "@aragon/connect-disputable-voting": "^0.8.0-beta.1",
+    "@aragon/connect-react": "^0.8.0-alpha.2",
     "@aragon/ui": "^1.7.0",
     "@sentry/browser": "^5.20.1",
     "clipboard-polyfill": "^3.0.1",
